--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -66,6 +66,12 @@ input[type='radio'] , .checkbox:before{
 	height: 20px;
 }
 
+button{
+	display: block;
+	width: 100%;
+	cursor: pointer;
+}
+
 .title{
 	margin-bottom: 14px;
 	font-size: 24px;
