--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -1884,7 +1884,8 @@ textarea{
 	position: relative;
 	min-height: 50px;
 	width: 75%;
-	margin:0 5% 0 20%;
+	/* shaun*/
+	margin:0 5% 0 5%;
 }
 .gal-centent .g-cont{
 	padding-bottom: 0;
